[gd_scene load_steps=7 format=3 uid="uid://xk82i8t1bcka"]

[ext_resource type="Texture2D" uid="uid://flu57ugipbh3" path="res://Assets/UI/ui.png" id="1_0yh6u"]
[ext_resource type="Script" path="res://global_scenes/UI/mchud.gd" id="1_kr2yo"]
[ext_resource type="FontFile" uid="uid://qk6vkam3o8uh" path="res://Fonts/pixelFJ8pt1__.TTF" id="2_eny24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rr0nc"]
bg_color = Color(0, 0, 0, 0.333333)
corner_detail = 1
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_luduc"]
bg_color = Color(0.165656, 0.165656, 0.165656, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1mkn"]
bg_color = Color(0, 0.556863, 1, 1)

[node name="MCHUD" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_kr2yo")

[node name="Ui" type="Sprite2D" parent="."]
position = Vector2(637.866, 361)
scale = Vector2(1.19934, 1.19934)
texture = ExtResource("1_0yh6u")

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 991.784
offset_top = 54.0
offset_right = 1106.78
offset_bottom = 98.0
theme_override_colors/font_color = Color(0.87451, 0.443137, 0.14902, 1)
theme_override_fonts/font = ExtResource("2_eny24")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rr0nc")
text = "Next"

[node name="Question_Box" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 178.866
offset_top = 117.0
offset_right = 1105.86
offset_bottom = 225.0
color = Color(0.894118, 0.894118, 0.921569, 1)

[node name="Question_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 214.866
offset_top = 140.0
offset_right = 1080.86
offset_bottom = 209.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 8
theme_override_fonts/font = ExtResource("2_eny24")
theme_override_font_sizes/font_size = 24
text = "Question"
autowrap_mode = 3

[node name="Answer_Box_1" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 205.624
offset_top = 265.0
offset_right = 620.624
offset_bottom = 393.0
color = Color(0.894118, 0.894118, 0.921569, 1)

[node name="Letter_Box_1" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 178.866
offset_top = 255.0
offset_right = 218.866
offset_bottom = 295.0

[node name="Letter_1" type="Label" parent="."]
layout_mode = 0
offset_left = 192.866
offset_top = 268.0
offset_right = 206.866
offset_bottom = 286.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_eny24")
text = "A"

[node name="Answer_Label_1" type="Label" parent="."]
layout_mode = 0
offset_left = 227.624
offset_top = 285.0
offset_right = 595.624
offset_bottom = 373.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("2_eny24")
theme_override_font_sizes/font_size = 16
text = "Answer 1"
autowrap_mode = 2

[node name="Answer_Button_1" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 205.624
offset_top = 265.0
offset_right = 620.624
offset_bottom = 393.0

[node name="Answer_Box_2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 690.382
offset_top = 265.0
offset_right = 1105.38
offset_bottom = 393.0
color = Color(0.894118, 0.894118, 0.921569, 1)

[node name="Letter_Box_2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 663.624
offset_top = 255.0
offset_right = 703.624
offset_bottom = 295.0

[node name="Letter_2" type="Label" parent="."]
layout_mode = 0
offset_left = 677.624
offset_top = 268.0
offset_right = 691.624
offset_bottom = 286.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_eny24")
text = "B"

[node name="Answer_Label_2" type="Label" parent="."]
layout_mode = 0
offset_left = 712.382
offset_top = 285.0
offset_right = 1080.38
offset_bottom = 373.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("2_eny24")
theme_override_font_sizes/font_size = 16
text = "Answer 2"
autowrap_mode = 2

[node name="Answer_Button_2" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 690.382
offset_top = 265.0
offset_right = 1105.38
offset_bottom = 393.0

[node name="Answer_Box_3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 205.382
offset_top = 429.0
offset_right = 620.382
offset_bottom = 557.0
color = Color(0.894118, 0.894118, 0.921569, 1)

[node name="Letter_Box_3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 178.624
offset_top = 419.0
offset_right = 218.624
offset_bottom = 459.0

[node name="Letter_3" type="Label" parent="."]
layout_mode = 0
offset_left = 192.624
offset_top = 432.0
offset_right = 206.624
offset_bottom = 450.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_eny24")
text = "C"

[node name="Answer_Label_3" type="Label" parent="."]
layout_mode = 0
offset_left = 227.382
offset_top = 449.0
offset_right = 595.382
offset_bottom = 537.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("2_eny24")
theme_override_font_sizes/font_size = 16
text = "Answer 3"
autowrap_mode = 2

[node name="Answer_Button_3" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 205.382
offset_top = 429.0
offset_right = 620.382
offset_bottom = 557.0

[node name="Answer_Box_4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 690.382
offset_top = 429.0
offset_right = 1105.38
offset_bottom = 557.0
color = Color(0.894118, 0.894118, 0.921569, 1)

[node name="Letter_Box_4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 663.624
offset_top = 419.0
offset_right = 703.624
offset_bottom = 459.0

[node name="Letter_4" type="Label" parent="."]
layout_mode = 0
offset_left = 677.624
offset_top = 432.0
offset_right = 691.624
offset_bottom = 450.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_eny24")
text = "D"

[node name="Answer_Label_4" type="Label" parent="."]
layout_mode = 0
offset_left = 712.382
offset_top = 449.0
offset_right = 1080.38
offset_bottom = 537.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("2_eny24")
theme_override_font_sizes/font_size = 16
text = "Answer 4"
autowrap_mode = 2

[node name="Answer_Button_4" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 690.382
offset_top = 429.0
offset_right = 1105.38
offset_bottom = 557.0

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -273.916
offset_top = -116.0
offset_right = 306.084
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_luduc")
theme_override_styles/fill = SubResource("StyleBoxFlat_e1mkn")
max_value = 5.0
value = 1.0
show_percentage = false

[node name="PurifyStatusLabel" type="Label" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -8.5
offset_right = 128.0
offset_bottom = 14.5
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_eny24")
text = "Purifying..."

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.6243
offset_top = 19.9999
offset_right = 72.6243
offset_bottom = 19.9999
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Answer_Button_1" to="." method="_on_answer_button_1_pressed"]
[connection signal="pressed" from="Answer_Button_2" to="." method="_on_answer_button_2_pressed"]
[connection signal="pressed" from="Answer_Button_3" to="." method="_on_answer_button_3_pressed"]
[connection signal="pressed" from="Answer_Button_4" to="." method="_on_answer_button_4_pressed"]
